--- a/Dashboard/Areas/AccountTeamEntity/Views/AccountTeam/Profile.cshtml
+++ b/Dashboard/Areas/AccountTeamEntity/Views/AccountTeam/Profile.cshtml
@@ -293,7 +293,7 @@
         
         $(document).on("click", ".update_account_team_points_submit", function (e) {
             $.ajax({
-                url: '@Url.ActionLink("UpdateAccountTeamPoints", "Home", new {area = "Dashboard"})',
+                url: '@Url.Action("UpdateAccountTeamPoints", "Home", new {area = "Dashboard"})',
                 method: 'post',
                 data: {
                     fk_AccountTeamGameWeak: '@Model.Id'
