--- a/Dashboard/Areas/SeasonEntity/Views/TeamGameWeak/ScoreDetails.cshtml
+++ b/Dashboard/Areas/SeasonEntity/Views/TeamGameWeak/ScoreDetails.cshtml
@@ -66,7 +66,7 @@
             let id = $(this).data('id');
                         
             $.ajax({
-              url: "@Url.ActionLink("Delete", "PlayerGameWeakScore", new { area = "PlayerScoreEntity" })",
+              url: "@Url.Action("Delete", "PlayerGameWeakScore", new { area = "PlayerScoreEntity" })",
               method: "post",
               data: {id: id},
               success: function() {
