--- a/Dashboard/Areas/TeamEntity/Views/Player/Details.cshtml
+++ b/Dashboard/Areas/TeamEntity/Views/Player/Details.cshtml
@@ -172,7 +172,7 @@
         
         $(document).on("click", ".update_account_team_points_submit", function (e) {
             $.ajax({
-                url: '@Url.ActionLink("UpdateAccountTeamPoints", "Home", new {area = "Dashboard"})',
+                url: '@Url.Action("UpdateAccountTeamPoints", "Home", new {area = "Dashboard"})',
                 method: 'post',
                 data: {
                   fk_Player: '@Model.Id',
