--- a/Dashboard/Areas/SeasonEntity/Views/TeamGameWeak/Profile.cshtml
+++ b/Dashboard/Areas/SeasonEntity/Views/TeamGameWeak/Profile.cshtml
@@ -116,6 +116,7 @@
 
                         <div class="card-body" style="overflow-x: auto">
                             <a class="btn btn-primary update_game_result">@Localizer.Get("UpdateGameResult")</a>
+                            <a class="btn btn-info update_teams_players">@Localizer.Get("UpdateTeamsPlayers")</a>
                             <hr>
                             <div class="d-flex justify-content-between align-items-start">
                                 <span class="badge bg-light-primary">@Html.DisplayNameFor(model => Model.HomeTeamPlayers)</span>
@@ -130,6 +131,7 @@
                                         <th>@Localizer.Get("Name")</th>
                                         <th>@Localizer.Get("Ranking")</th>
                                         <th>@Localizer.Get("TotalPoints")</th>
+                                        <th>@Localizer.Get("IsCantEdit")</th>
                                         <th>@Localizer.Get("PlayerGameWeakScore")</th>
                                         <th>@Localizer.Get("Statistics")</th>
                                         <th>@Localizer.Get("PlayerGameWeakScoreState")</th>
@@ -144,8 +146,15 @@
                                                     @item.Player.Name
                                                 </a>
                                             </td>
-                                            <td>@item.Ranking</td>
+                                            <td>
+                                                <input type="text" class="form-control player_ranking_input" data-fk_playergameweak="@item.Id" value="@item.Ranking" />
+                                            </td>
                                             <td>@item.TotalPoints</td>
+                                            <td>
+                                                <span class="badge bg-@(!item.IsCanNotEdit ? "success" : "danger")">
+                                                    @Localizer.Get((!item.IsCanNotEdit ? "Yes" : "No"))
+                                                </span>
+                                            </td>
                                             <td>
                                                 <a class="modalbtn" href="/SeasonEntity/TeamGameWeak/ScoreDetails?fk_Player=@item.Player.Id&fk_TeamGameWeak=@Model.Id">
                                                     @Localizer.Get("Click to View")
@@ -187,6 +196,7 @@
                                             <th>@Localizer.Get("Name")</th>
                                             <th>@Localizer.Get("Ranking")</th>
                                             <th>@Localizer.Get("TotalPoints")</th>
+                                            <th>@Localizer.Get("IsCantEdit")</th>
                                             <th>@Localizer.Get("PlayerGameWeakScore")</th>
                                             <th>@Localizer.Get("Statistics")</th>
                                             <th>@Localizer.Get("PlayerGameWeakScoreState")</th>
@@ -201,8 +211,15 @@
                                                         @item.Player.Name
                                                     </a>
                                                 </td>
-                                                <td>@item.Ranking</td>
+                                                <td>
+                                                    <input type="text" class="form-control player_ranking_input" data-fk_playergameweak="@item.Id" value="@item.Ranking" />
+                                                </td>
                                                 <td>@item.TotalPoints</td>
+                                                <td>
+                                                    <span class="badge bg-@(!item.IsCanNotEdit ? "success" : "danger")">
+                                                        @Localizer.Get((!item.IsCanNotEdit ? "Yes" : "No"))
+                                                    </span>
+                                                </td>
                                                 <td>
                                                     <a class="modalbtn" href="/SeasonEntity/TeamGameWeak/ScoreDetails?fk_Player=@item.Player.Id&fk_TeamGameWeak=@Model.Id">
                                                         @Localizer.Get("Click to View")
@@ -340,6 +357,41 @@
             }); 
         });
         // end update_account_team_points
+        
+        // start update_teams_players
+        $(document).on("click", ".update_teams_players", function (e) {  
+            $.ajax({
+                url: '@Url.Action("UpdateTeamsPlayers", "TeamGameWeak", new {area = "SeasonEntity"})',
+                method: 'post',
+                data: {
+                  fk_TeamGameWeak: '@Model.Id',
+                },
+                success: function(data) {
+                  $("#success").modal('show');
+                }
+            }); 
+        });
+        // end update_teams_players
+        
+        
+        // start edit player_ranking
+        $(document).on("blur", ".player_ranking_input", function (e) {
+            let fk_PlayerGameWeak = $(this).data("fk_playergameweak");
+            let ranking = $(this).val();
+            
+            $.ajax({
+                url: '@Url.Action("UpdatePlayerGameWeakRanking", "PlayerGameWeak", new {area = "PlayerScoreEntity"})',
+                method: 'post',
+                data: {
+                  fk_PlayerGameWeak: fk_PlayerGameWeak,
+                  ranking: ranking
+                },
+                success: function(data) {
+                  $("#success").modal('show');
+                }
+            }); 
+        });
+        // end edit player_ranking
     </script>
 
 }
