--- a/Dashboard/Areas/SeasonEntity/Views/TeamGameWeak/Index.cshtml
+++ b/Dashboard/Areas/SeasonEntity/Views/TeamGameWeak/Index.cshtml
@@ -106,6 +106,7 @@
                                                 <th>@Html.DisplayNameFor(model => row.StartTime)</th>
                                                 <th>@Html.DisplayNameFor(model => row.IsEnded)</th>
                                                 <th>@Html.DisplayNameFor(model => row.IsDelayed)</th>
+                                                <th>@Html.DisplayNameFor(model => row.IsCanNotEdit)</th>
                                                 <th>
                                                     @Html.DisplayNameFor(model => row.Id)
                                                 </th>
@@ -155,6 +156,7 @@ else
                                     <th>@Html.DisplayNameFor(model => row.StartTime)</th>
                                     <th>@Html.DisplayNameFor(model => row.IsEnded)</th>
                                     <th>@Html.DisplayNameFor(model => row.IsDelayed)</th>
+                                    <th>@Html.DisplayNameFor(model => row.IsCanNotEdit)</th>
                                     <th>
                                         @Html.DisplayNameFor(model => row.Id)
                                     </th>
@@ -277,7 +279,30 @@ else
                                 }
                             }
                         },
-                        { data: "isDelayed" },
+                        {
+                            data: "isDelayed",
+                            orderable: false,
+                            render: function (data) {
+                                if (data == true) {
+                                    return '<input type="checkbox"  class="form-check-input" checked disabled>';
+                                }
+                                else {
+                                    return '<input type="checkbox"  class="form-check-input"  disabled>';
+                                }
+                            }
+                        },
+                        {
+                            data: "isCanNotEdit",
+                            orderable: false,
+                            render: function (data) {
+                                if (data == true) {
+                                    return '<input type="checkbox"  class="form-check-input" checked disabled>';
+                                }
+                                else {
+                                    return '<input type="checkbox"  class="form-check-input"  disabled>';
+                                }
+                            }
+                        },
                         { data: "id" },
                     ]
                 });
