--- a/Dashboard/Areas/AppInfoEntity/Views/AppAbout/Details.cshtml
+++ b/Dashboard/Areas/AppInfoEntity/Views/AppAbout/Details.cshtml
@@ -165,6 +165,19 @@
                                                 }
                                             </div>
                                         </div>
+                                        <div class="col-md-4 col-12">
+                                            <div class="mb-1">
+                                                <label class="form-label">@($"{Localizer.Get("TiktokUrl")}") :</label>
+                                                @if (!string.IsNullOrEmpty(Model.TiktokUrl))
+                                                {
+                                                    <a href="@Model.TiktokUrl" target="_blank">@Model.TiktokUrl</a>
+                                                }
+                                                else
+                                                {
+                                                    <span>-</span>
+                                                }
+                                            </div>
+                                        </div>
 
                                         <div class="col-md-4 col-12">
                                             <div class="mb-1">
